# src/routes/note.route.js
@@ -10,7 +10,7 @@ router.post('', newNoteValidator, noteController.newNote);
 // // login function
 // router.post('/:_id',noteController.getNote);
 
-router.get('',noteController.getAllNotes);
+router.get('/all',noteController.getAllNotes);
 
 router.get('/:_id',noteController.getNote);
 // router.post('', noteController.loginNote);
@@ -19,6 +19,6 @@ router.get('/:_id',noteController.getNote);
 router.delete('/delete/:_id', noteController.deleteNote);
 
 //route to update a note
-router.put('/update/noteId', noteController.updateNote);
+router.put('/update/:_id', noteController.updateNote);
 
 export default router;
